--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Integración continua sobre el módulo Ejercicio4.1
 
 on:
@@ -28,10 +25,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint pytest
         # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Verificar estructura de directorios
+      run: |
+        ls -R  # Esto te ayudará a ver la estructura de tu proyecto
     - name: Comprobación de código con pylint
       run: |
-        # falla la integración si la puntuación (score) del linting es menor al umbral indicado
-        pylint --fail-under=10 src
+        pylint ./src --fail-under=10  # Asegúrate de que pylint apunte correctamente a 'src'
         
     - name: Pruebas con pytest
       run: |
